# mycelia

./: .gitignore  CHANGELOG.md  LESSONS_LEARNED.md  LICENSE  PROJECT_CONTEXT.md  README.md  TODO.md  VISION.md  package.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/ai/: claude.ts  extraction.ts  rag.ts
src/lib/components/: ChatInput.svelte  ChatMessage.svelte  GraphView.svelte  Onboarding.svelte  Sidebar.svelte
src/lib/stores/: chat.ts  settings.ts
src/lib/vault/: filesystem.ts  graph.ts  journal.ts  parser.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/graph/: +page.svelte
src/routes/settings/: +page.svelte
